@@ -10,7 +10,7 @@ die "QUOTA_SFILES environment variable not set\n" unless defined $ENV{'QUOTA_SFI
 die "QUOTA_HFILES environment variable not set\n" unless defined $ENV{'QUOTA_HFILES'};
 
 open FILE, $ARGV[0];
-$qdata = join '', (@_=<FILE>);
+my $qdata = join '', (@_=<FILE>);
 close FILE;
 open FILE, ">$ARGV[0]";
 print FILE &edit_quota_file($qdata, $ENV{'QUOTA_FILESYS'}, $ENV{'QUOTA_SBLOCKS'}, $ENV{'QUOTA_HBLOCKS'}, $ENV{'QUOTA_SFILES'}, $ENV{'QUOTA_HFILES'});
@@ -18,7 +18,7 @@ close FILE;
 
 # edit_quota_file(data, filesys, sblocks, hblocks, sfiles, hfiles)
 sub edit_quota_file {
-	local($rv, $line, @line, $i);
+	my($rv, $line, @line, $i);
 	@line = split /\n/, $_[0];
 	for ( $i=0; $i<@line; $i++ ) {
 		if ($line[$i] =~ /^\s+(\S+)\s+(\d+)\s+(\d+)\s+(\d+)\s+(\d+)\s+(\d+)\s+(\d+)$/ && ($1 eq $_[1] || $_[1] eq '*')) {
